--- a/wp-content/themes/bpo/assets/css/home.css
+++ b/wp-content/themes/bpo/assets/css/home.css
@@ -18,112 +18,93 @@
 }
 .intro__subtitle {
   margin-bottom: 12px;
-  font-size: 24px;
+  font-size: clamp(18px, 24 / 1168 * 100vw, 24px);
   line-height: 1.0833333333;
   color: #1888FF;
 }
 .intro__title {
   margin-bottom: 22px;
-  font-size: 40px;
+  font-size: clamp(24px, 40 / 1168 * 100vw, 40px);
   line-height: 1.1;
 }
 .intro__info {
-  font-size: 22px;
+  font-size: clamp(16px, 22 / 1168 * 100vw, 22px);
   line-height: 1;
 }
 
-.previews {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-column-gap: 24px;
-     -moz-column-gap: 24px;
-          column-gap: 24px;
+.preview-row:not(:first-child) {
+  margin-top: 40px;
+}
+@media (min-width: 575.98px) {
+  .preview-row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-column-gap: 24px;
+       -moz-column-gap: 24px;
+            column-gap: 24px;
+  }
 }
 
-.previews__item-img {
+@media (min-width: 575.98px) {
+  .preview-row--type-1 .preview-row__item:first-child {
+    min-width: calc(33.3333333333% - 12px);
+    max-width: calc(33.3333333333% - 12px);
+  }
+}
+@media (min-width: 575.98px) {
+  .preview-row--type-1 .preview-row__item:last-child {
+    min-width: calc(66.6666666667% - 12px);
+    max-width: calc(66.6666666667% - 12px);
+  }
+}
+
+@media (min-width: 575.98px) {
+  .preview-row--type-2 .preview-row__item {
+    min-width: calc(33.3333333333% - 16px);
+    max-width: calc(33.3333333333% - 16px);
+  }
+}
+
+@media (min-width: 575.98px) {
+  .preview-row--type-3 .preview-row__item:first-child {
+    min-width: calc(66.6666666667% - 12px);
+    max-width: calc(66.6666666667% - 12px);
+  }
+}
+@media (min-width: 575.98px) {
+  .preview-row--type-3 .preview-row__item:last-child {
+    min-width: calc(33.3333333333% - 12px);
+    max-width: calc(33.3333333333% - 12px);
+  }
+}
+
+@media (max-width: 575.98px) {
+  .preview-row__item:not(:first-child) {
+    margin-top: 15px;
+  }
+}
+.preview-row__item-img {
   margin-bottom: 24px;
   display: block;
   line-height: 0;
 }
-.previews__item-subtitle {
+.preview-row__item-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.preview-row__item-subtitle {
   margin-bottom: 4px;
   font-size: 14px;
   line-height: 1;
   color: #537599;
 }
-.previews__item-title {
-  font-size: 24px;
+.preview-row__item-title {
+  font-size: clamp(18px, 24 / 1168 * 100vw, 24px);
   line-height: 1;
 }
-.previews__item-title > a {
+.preview-row__item-title > a {
   color: #1888FF;
-}
-
-.previews__item--short {
-  min-width: calc(33% - 12px);
-  max-width: calc(33% - 12px);
-}
-@media (max-width: 1125px) {
-  .previews__item--short {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-}
-@media (max-width: 1125px) {
-  .previews__item--short .previews__item-img {
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
-  }
-}
-.previews__item--short .previews__item-img img {
-  width: 100%;
-  height: auto;
-}
-@media (max-width: 1125px) {
-  .previews__item--short .previews__item-img img {
-    height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-}
-
-.previews__item--whide {
-  min-width: calc(67% - 12px);
-  max-width: calc(67% - 12px);
-}
-@media (min-width: 1125px) {
-  .previews__item--whide {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-}
-.previews__item--whide .previews__item-img img {
-  width: 100%;
-  height: auto;
-}
-@media (min-width: 1125px) {
-  .previews__item--whide .previews__item-img {
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
-  }
-  .previews__item--whide .previews__item-img img {
-    height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
 }
