--- a/wp-content/themes/bpo/assets/scss/home.scss
+++ b/wp-content/themes/bpo/assets/scss/home.scss
@@ -11,30 +11,84 @@
 	text-align: center;
 	&__subtitle {
 		margin-bottom: 12px;
-		font-size: 24px;
+		font-size: clamp(18px, vw(24), 24px);
 		line-height: calc(26 / 24);
 		color: $colorBlue;
 	}
 	&__title {
 		margin-bottom: 22px;
-		font-size: 40px;
+		font-size: clamp(24px, vw(40), 40px);
 		line-height: calc(44 / 40);
 	}
 	&__info {
-		font-size: 22px;
+		font-size: clamp(16px, vw(22), 22px);
 		line-height: 1;
 	}
 }
-.previews {
-	display: flex;
-	flex-wrap: wrap;
-	column-gap: 24px;
+.preview-row {
+	&:not(:first-child){
+		margin-top: 40px;
+	}
+	@media (min-width: $breakSmall) {
+		display: flex;
+		column-gap: 24px;
+	}
 }
-.previews__item {
+.preview-row--type-1 {
+	.preview-row__item {
+		&:first-child {
+			@media (min-width: $breakSmall) {
+				min-width: calc(100% / 3 - 12px);
+				max-width: calc(100% / 3 - 12px);
+			}
+		}
+		&:last-child {
+			@media (min-width: $breakSmall) {
+				min-width: calc(100% / 3 * 2 - 24px / 2);
+				max-width: calc(100% / 3 * 2 - 24px / 2);
+			}
+		}
+	}
+}
+.preview-row--type-2 {
+	.preview-row__item {
+		@media (min-width: $breakSmall) {
+			min-width: calc(100% / 3 - 48px / 3);
+			max-width: calc(100% / 3 - 48px / 3);
+		}
+	}
+}
+.preview-row--type-3 {
+	.preview-row__item {
+		&:first-child {
+			@media (min-width: $breakSmall) {
+				min-width: calc(100% / 3 * 2 - 24px / 2);
+				max-width: calc(100% / 3 * 2 - 24px / 2);
+			}
+		}
+		&:last-child {
+			@media (min-width: $breakSmall) {
+				min-width: calc(100% / 3 - 12px);
+				max-width: calc(100% / 3 - 12px);
+			}
+		}
+	}
+}
+.preview-row__item {
+	@media (max-width: $breakSmall) {
+		&:not(:first-child) {
+			margin-top: 15px;
+		}
+	}
 	&-img {
 		margin-bottom: 24px;
 		display: block;
 		line-height: 0;
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
 	}
 	&-subtitle {
 		margin-bottom: 4px;
@@ -43,52 +97,10 @@
 		color: #537599;
 	}
 	&-title {
-		font-size: 24px;
+		font-size: clamp(18px, vw(24), 24px);
 		line-height: 1;
 		& > a {
 			color: $colorBlue;
-		}
-	}
-}
-.previews__item--short {
-	min-width: calc(33% - 12px);
-	max-width: calc(33% - 12px);
-	@media (max-width: 1125px) {
-		display: flex;
-		flex-direction: column;
-	}
-	.previews__item-img {
-		@media (max-width: 1125px) {
-			flex-grow: 1;
-		}
-		img {
-			width: 100%;
-			height: auto;
-			@media (max-width: 1125px) {
-				height: 100%;
-				object-fit: cover;
-			}
-		}
-	}
-}
-.previews__item--whide {
-	min-width: calc(67% - 12px);
-	max-width: calc(67% - 12px);
-	@media (min-width: 1125px) {
-		display: flex;
-		flex-direction: column;
-	}
-	.previews__item-img {
-		img {
-			width: 100%;
-			height: auto;
-		}
-		@media (min-width: 1125px) {
-			flex-grow: 1;
-			img {
-				height: 100%;
-				object-fit: cover;
-			}
 		}
 	}
 }
